<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="black">#000000</color>
    <color name="darkblue">#0099CC</color>
    <color name="red">#CC0000</color>
    <color name="orange">#FF8800</color>
    <color name="green">#99CC00</color>
    <color name="purple">#9933CC</color>
    <color name="blue">#33B5E5</color>
    <color name="darkgreen">#669900</color>
    <color name="lightblue">#CCEEFF</color>
    <color name="creamy">#eae5ca</color>
    <color name="white">#FFFFFF</color>
    <color name="gray">#c4d2db</color>
    <color name="darkgray">#474747</color>

    <string name="app_name">AutoVir</string>
    <string name="action_settings">Connection Settings</string>
    <string name="wifi_settings">Wifi Settings</string>
    <string name="about">About</string>
    <string name="about_text">This Application has been written as a practical master thesis work of University of Bologna and ISMB Lab.\n
        This app connects to Virtus middleware through OpenFire server and support XMPP functionalities.\n \n Developed by "Farmin Farzin" </string>
    <string name="exit">Exit</string>
    <string name="user_settings">User Settings</string>
    <string name="setting_username">Username</string>
    <string name="setting_password">Password</string>
    <string name="server_settings">Server Settings</string>
    <string name="setting_server_ip">Server IP Address</string>
    <string name="setting_server_port">Server Port</string>
    <string name="connection_settings">Connection Settings</string>
    <string name="domain_name">farmin.virtus.it</string>
    <string name="first_tab">Messages</string>
    <string name="second_tab">Map</string>
    <string name="third_tab">Inbox</string>
    <string name="ok">OK</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="network_setting">Network Setting</string>
    <string name="mobile_setting">Setting</string>
    <string name="no_network_message">There is no connection, Please check your network setting!</string>
    <string name="no_XMPP_message">There is no XMPP connection, Please check your server setting!</string>
    <string name="server_setting">Setting</string>
    <string name="no_xmpp_message">There is no available XMPP connection, please check connection setting!</string>
    <string name="gps_alert_title">Location Service is not available</string>
    <string name="alert_message">Check your Android Location Service Setting</string>
    <string name="custom_message_dialog">Write your message and push Send button</string>
    <string name="custom_sent_message_dialog">message has been sent.</string>

</resources>